# avito-bootcamp-test-task

./: .gitignore  README.md  answer.csv  pyproject.toml
notebooks/: solution.ipynb
src/: config.py  metrics.py  retrieval.py  solution.py
tests/: test_metrics.py  test_submission.py
