[project]
name = "avito-bootcamp-test-task"
version = "1.0.0"
description = "Avito Data Science Bootcamp - Тестовое задание"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "lxml>=6.1.1",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.11.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "RUF", "SIM", "UP"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
